@@ -1,4 +1,5 @@
 2.6.6
+ - Fixes crash in test005
  - More Visual C++ improvements
  - Removed collaboration diagrams from reference docs
 2.6.5
