@@ -5,6 +5,9 @@
   - Disabled collaboration graphs (not of much use to end-users)
  include/pqxx/compiler-public.hxx:
   - Select appropriate libpq/libpqxx binaries in Visual C++ (Bart Samwel)
+ include/pqxx/connection_base.hxx, include/pqxx/libpq-forward.hxx,
+ src/connection_base.cxx:
+  - Fix for nasty bug in notice processor handling (Bart Samwel)
  include/pqxx/cursor.hxx, src/cursor.cxx:
   - Made check_displacement() const (Bart Samwel)
   - Removed unnecessary PQXX_LIBEXPORT directives (Bart Samwel)
@@ -12,6 +15,8 @@
   - Fixed "long" return types; should be pos_type
  test/test000.cxx:
   - Visual C++ workaround: no stringstream << operator (Bart Samwel)
+ test/test061.cxx:
+  - Fixed "unreferenced local variable" warning (Bart Samwel)
 2006-05-07  Jeroen T. Vermeulen <jtv@xs4all.nl>
  doc/libpqxx.xml:
   - Fixed bugs that caused validation to fail
